Edited frontend to look DNBish
Co-authored-by: alexauren <alexauren@users.noreply.github.com>

--- a/app/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/app/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -20,8 +20,10 @@
 
 .questionInputSendButton {
     cursor: pointer;
+    color: #fdbb31;
 }
 
 .questionInputSendButtonDisabled {
     opacity: 0.4;
+    color: #fdbb31;
 }
