--- a/app/frontend/src/components/Answer/Answer.module.css
+++ b/app/frontend/src/components/Answer/Answer.module.css
@@ -4,6 +4,7 @@
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     outline: transparent solid 1px;
+    
 }
 
 .answerLogo {
@@ -46,7 +47,7 @@
     border-radius: 4px;
     padding: 0px 8px;
     background: #d1dbfa;
-    color: #123bb6;
+    color: #007272;
     text-decoration: none;
     cursor: pointer;
 }
